--- a/WPT-ALL/Daily-Practice-Codes/Day-1-Practice/ass1.html
+++ b/WPT-ALL/Daily-Practice-Codes/Day-1-Practice/ass1.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
+    <!-- Define the title of the HTML document -->
     <title>
         <p>This is Title</p>
     </title>
 </head>
 
 <body>
+    <!-- Display the main content of the HTML document -->
     <p>This is Body!!!</p>
 </body>
 
