--- a/WPT-ALL/Daily-Practice-Codes/Day-1-Practice/ass4.html
+++ b/WPT-ALL/Daily-Practice-Codes/Day-1-Practice/ass4.html
@@ -3,6 +3,7 @@
 
 <head>
     <style>
+        /* CSS styles for the page */
         * {
             margin: 0;
             padding: 0;
@@ -13,6 +14,7 @@
             background: black;
         }
 
+        /* Styles for the first box */
         .first-box fieldset legend {
             color: #fff;
         }
@@ -33,6 +35,7 @@
             color: #fff;
         }
 
+        /* Styles for the second box */
         .second-box fieldset legend .box2 {
             background-color: blue;
             width: 200px;
@@ -57,6 +60,7 @@
 
 <body style="margin-top: 50px">
     <div class="container">
+        <!-- First Box -->
         <div class="first-box">
             <fieldset style="
             width: 600px;
@@ -67,6 +71,7 @@
             height: 220px;
           ">
                 <legend>
+                    <!-- Box title for name and address -->
                     <div class="box">
                         <p>Name and address</p>
                     </div>
@@ -78,7 +83,7 @@
                             <td>SSN :</td>
                             <td>
                                 <input type="text" /><span style="margin-left: 10px; background-color: blue">Fill the
-                                    Name And Adress</span>
+                                    Name And Address</span>
                             </td>
                         </tr>
 
@@ -93,7 +98,7 @@
                         </tr>
 
                         <tr>
-                            <td>portal Code :</td>
+                            <td>Postal Code :</td>
                             <td><input type="text" /></td>
                         </tr>
 
@@ -106,6 +111,7 @@
             </fieldset>
         </div>
 
+        <!-- Second Box -->
         <div class="second-box">
             <fieldset style="
             width: 600px;
@@ -116,6 +122,7 @@
             height: 180px;
           ">
                 <legend>
+                    <!-- Box title for username and password -->
                     <div class="box2">
                         <p>Username and Password</p>
                     </div>
@@ -124,7 +131,7 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td>UserName :</td>
+                            <td>Username :</td>
                             <td>
                                 <input type="text" />
                             </td>
@@ -146,6 +153,7 @@
             </fieldset>
         </div>
 
+        <!-- Button for registration -->
         <div class="btn" style="margin-left: 50px">
             <button style="
             width: 100px;
