--- a/WPT-ALL/Daily-Practice-Codes/Day-2-Practice/Practice-1/index.html
+++ b/WPT-ALL/Daily-Practice-Codes/Day-2-Practice/Practice-1/index.html
@@ -6,28 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
+        // JavaScript function to calculate the sum of two numbers
         function myFunction(){
+            // Get the values of the input fields and convert them to integers
             var a = parseInt(document.getElementById("fname").value);
             var b = parseInt(document.getElementById("lname").value);
-            var result = a+b;
-            document.getElementById("disp").innerHTML = "Result : "+result;
+            // Calculate the sum of the two numbers
+            var result = a + b;
+            // Display the result in the "disp" element
+            document.getElementById("disp").innerHTML = "Result : " + result;
         }
     </script>
 </head>
 <body>
     
-    <form >
+    <form>
         <p>Enter First Number</p>
-        <input type="number"  id="fname">
+        <input type="number" id="fname">
         <p>Enter Second Number</p>
         <input type="number" id="lname"><br>
+        <!-- Button to trigger the calculation -->
         <input type="button" name="btn" id="btn" value="Result" onclick="myFunction()"><br>
         <div id="disp">
            
         </div>
     </form>
-
-
-
 </body>
 </html>
